[package]
name = "dhcpd-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
axum-error = "0.2.0"
axum-macros = "0.3.8"
chrono = { version = "0.4.31", features = ["serde"] }
eyre = "0.6.8"
nom = "7.1.3"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["indexmap", "preserve_order"] }
