[package]
name = "dhcpd-api"
description = "A REST API that serves information from ISC DHCPd leases"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/dylanwh/dhcpd-api"
authors = ["Dylan Hardison <dylan@hardison.net>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
axum-error = "0.2.0"
axum-macros = "0.3.8"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
dirs = "5.0.1"
eyre = "0.6.8"
nibble_vec = "0.1.0"
nom = "7.1.3"
notify = { version = "6.1.1", default-features = false, features = ["fsevent-sys", "macos_kqueue"] }
quick-xml = { version = "0.30.0", features = ["serde", "async-tokio", "serde-types"] }
radix_trie = { version = "0.2.1", features = ["serde"] }
reqwest = { version = "0.11.22", default-features = false, features = ["tokio-rustls", "rustls", "hyper-rustls", "rustls-tls", "serde_json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = { version = "1.0.107", features = ["indexmap", "preserve_order"] }
tikv-jemallocator = "0.5.4"
tokio = { version = "1.33.0", features = ["full"] }
tokio-ping = "0.3.0"
tracing = { version = "0.1.40", features = ["log", "async-await"] }
